# ari-dai-skills

./: .cursorrules  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REGISTRY.md  bootstrap.sh  install.bat  install.sh  publish-arch-page.mjs  pyproject.toml  update.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_skill.md
.github/workflows/: ci.yml  release.yml
all-dai-sdd/: SKILL.md
dai/: __init__.py  client.py  state.py
dai/cli/: main.py
dai/mcp/: _ds.py  _links.py  dynamic.py  registry.py  server.py
dai/mcp/tools/: ai.py  context.py  datasets.py  dataspheres.py  export.py  library.py  newsletters.py  pages.py  planner.py  presentations.py  research.py  sdd.py  sequences.py  surveys.py
skills/ai/: SKILL.md
skills/all-dai-sdd/: SKILL.md  cite-ar.mjs  loop.mjs  post-install.sh  ralph-run.mjs  sdd_schema.py  test_verify_gates.py  verify_gates.py
skills/all-dai-sdd/templates/: dashboard.html  next-steps-uat.html
skills/ari-dai-skills/: SKILL.md
skills/breadcrumb/: SKILL.md
skills/coding-standards/: SKILL.md
skills/comfyui-restart/: comfyui-restart.mjs
skills/connections/: SKILL.md
skills/context/: SKILL.md
skills/conversation/: SKILL.md
skills/courses/: SKILL.md
skills/data-viz/: SKILL.md  encode.mjs  svg-components.mjs  templates.md
skills/data_cards/: SKILL.md
skills/datasets/: SKILL.md
skills/dataspheres/: SKILL.md
skills/dataspheres-api/: SKILL.md
skills/design-principles/: SKILL.md
skills/documents/: SKILL.md
skills/export/: SKILL.md
skills/faceless/: SKILL.md
skills/folders/: SKILL.md
skills/graphs/: SKILL.md
skills/house-style/: SKILL.md
skills/image-ecosystem/: SKILL.md
skills/images/: SKILL.md
skills/infosec/: SKILL.md
skills/kb-context/: SKILL.md
skills/knowledge_bank/: SKILL.md
skills/linked_urls/: SKILL.md
skills/media/: SKILL.md
skills/nav/: SKILL.md
skills/newsletter-survey-workflow/: SKILL.md
skills/newsletters/: SKILL.md
skills/pages/: SKILL.md
skills/planner/: SKILL.md
skills/playwright/: SKILL.md
skills/playwright-tests/: SKILL.md
skills/posts/: SKILL.md
skills/preflight/: SKILL.md
skills/presentations/: SKILL.md
skills/principles/: SKILL.md
skills/release-notes/: SKILL.md
skills/render/: SKILL.md
skills/research/: SKILL.md
skills/rich-content/: SKILL.md  skill.json
skills/roi/: SKILL.md
skills/saved_lists/: SKILL.md
skills/sdd-conductor/: FILE-UPLOAD-API.md  README.md  sdd-conductor.mjs
skills/search/: SKILL.md
skills/seo/: SKILL.md
skills/sequencers/: SKILL.md
skills/sequences/: SKILL.md
skills/session-doc/: SKILL.md
skills/survey/: SKILL.md
skills/surveys/: SKILL.md
skills/tasks/: SKILL.md
tests/: conftest.py  test_client.py  test_e2e_smoke.py  test_links.py  test_state.py  test_tools.py
