[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dai-skills"
version = "0.2.0"
description = "AI-native skill library for Dataspheres AI — use all dai, every dai"
authors = [{ name = "Dataspheres AI", email = "dev@dataspheres.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dataspheres", "ai", "mcp", "skills", "claude", "ari"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "hatch>=1.12.0",
]

[project.scripts]
dai = "dai.cli.main:app"

[project.entry-points."mcp.server"]
dai-skills = "dai.mcp.server:main"

[project.urls]
Homepage = "https://dataspheres.ai"
Repository = "https://github.com/geekdreamzz/ari-dai-skills"
Documentation = "https://dataspheres.ai/docs/dai-skills"

[tool.hatch.build.targets.wheel]
packages = ["dai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
