[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dai-skills"
version = "0.2.0"
description = "AI-native skill library for Dataspheres AI — use all dai, every dai"
authors = [{ name = "Dataspheres AI", email = "dev@dataspheres.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dataspheres", "ai", "mcp", "skills", "claude", "ari"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Used only by skills/all-dai-sdd/verify_gates.py (standalone CLI gate verifier).
# Kept optional because z3-solver lacks prebuilt wheels on most platforms after 4.9.x
# (requires CMake + a C++ toolchain to build from source), which would otherwise block
# every fresh install of the core MCP on stock macOS and Windows.
# Install with: pip install "dai-skills[sdd]"   or   uv tool install "dai-skills[sdd]"
sdd = [
    "z3-solver>=4.12.0",
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "hatch>=1.12.0",
]

[project.scripts]
dai = "dai.cli.main:app"

[project.entry-points."mcp.server"]
dai-skills = "dai.mcp.server:main"

[project.urls]
Homepage = "https://dataspheres.ai"
Repository = "https://github.com/geekdreamzz/ari-dai-skills"
Documentation = "https://dataspheres.ai/docs/dai-skills"

[tool.hatch.build.targets.wheel]
packages = ["dai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
